Map controllers ui fixed
Map controllers UI fixed not to overlap with the floor switcher

--- a/CondorGuide/client/src/App.css
+++ b/CondorGuide/client/src/App.css
@@ -354,8 +354,8 @@
 
 .map-controls {
   position: absolute;
-  bottom: 15px;
-  right: 15px;
+  top: 15px;
+  left: 15px;
   z-index: 1000;
 }
 
